log
Tue 11 Apr 2023 08:33:27 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
00b36c5
Tue 11 Apr 2023 08:33:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9bb64e4
Tue 11 Apr 2023 08:40:55 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e59f0f9
Tue 11 Apr 2023 08:41:21 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|5
total_score: 20/70
10a4f0c
Tue 11 Apr 2023 08:43:22 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
9e0e1f7
Tue 11 Apr 2023 08:48:00 PM UTC: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  0|0
ef4ca80
Tue 11 Apr 2023 08:49:03 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
dc7d68a
Tue 11 Apr 2023 08:50:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
56012fa
Tue 11 Apr 2023 08:51:57 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
b121efe
Tue 11 Apr 2023 08:55:18 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e06d895
Tue 11 Apr 2023 08:55:42 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c10142f
Tue 11 Apr 2023 08:56:02 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:8: error: unused variable ‘indiceH’ [-Werror=unused-variable]
   82 |   long indiceH = hash(key, map->capacity);
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ec9607
